--- a/MPSMF/Lezioni/Lez 15 - 2:05:23/Lez 15 - 2:05:23.md
+++ b/MPSMF/Lezioni/Lez 15 - 2:05:23/Lez 15 - 2:05:23.md
@@ -1,52 +1,60 @@
 #Lezione Mercati 2/05/2023
 ##Recap
-* Viene ripreso il grafici dell'altra volta, con la Capital Market Line. Abbiamo visto che il punto (sigma_T,r_T) è individuato con Sharp a partire da $$(w_1^T,...,w_M^T)$$
-Abbiamo caratterizzato anche $$\sigma_T = (\sum_{i=1}^M \sigma_l,m * w_l^T * w_m^T)$$ e $$r_T =(\sum_{i=1}^M r_m * w_m^T)$$ con le r che sono medie, quindi trattino sopra.
-Queste forme differiscono da ciò che troviamo sulle slide, ma sono corrette, in quando semplicemente riscritte.
-Se prendo un punto $$(\sigma,r)$$ appartenente alla MKL, scrivo retta passante per due punti:
-$$\frac{r - r_f}{r_T - r_f} = \frac{\sigma - \sigma_0}{\sigma_T - \sigma_0} = \frac{\sigma}{\sigma_T}$$ (r ed $r_T$ sono medie)
-dove $r_f$ sarebbe il rendimento sull'asse delle y.
-$$\sigma(r_a) =  \frac{\sigma_T}{r_T - r_0} *(r_a - r_0)$$
-dove $r_a$ è con trattino sopra.
-con (simbolo media a sinistra e su r_T) $$r(\sigma_a) = r_0 + \frac{r_T - r_0}{\sigma_T}*\sigma_a$$
+Viene ripreso il grafici dell'altra volta, con la Capital Market Line. Abbiamo visto che il punto (sigma_T,r_T) è individuato con Sharp a partire da $$(w_1^{(T)},...,w_M^{(T)})$$
+Abbiamo caratterizzato anche $$\sigma_T = (\sum_{l,m=1}^M \sigma_{l,m}  w_l^{(T)}  w_m^{(T)})^{1/2}$$ e $$\bar{r}_T =\sum_{i=1}^M r_m * w_m^{(T)}$$ con le r che sono medie.
+Se prendo un punto $$(\sigma,r)$$ appartenente alla MCL, scrivo retta passante per due punti:
+$$\frac{\bar{r} - r_0}{\bar{r_T} - r_0} = \frac{\sigma - \sigma_0}{\sigma_T - \sigma_0} = \frac{\sigma}{\sigma_T}$$ (r ed $r_T$ sono medie)
+dove $r_0$ sarebbe il rendimento sull'asse delle y.
+$$\sigma(r_a) =  \frac{\sigma_T}{\bar{r_T} - r_0} *(r_a - r_0)$$
+con (simbolo media a sinistra e su r_T) 
+$${\bar{r}(\sigma_a)} = r_0 + \frac{\bar{r_T} - r_0}{\sigma_T}\sigma_a$$
 La CML ci aiuta moltissimo quindi.
 
-* Se vado in banca, e apro il contocorrente, mi viene fatta la profilazione, per capire quale sia il mio livello di avversione al rischio. In base ad esso, mi propongono investimenti, con cui mi viene proposto massimo rendimento atteso secondo l'ultima formula.
-* Devo scegliere portafoglio $$(w_1,..,w_M) = \alpha(w_1^T,...,w_M^T) + (1-\alpha)*(w_1^f,...,w_M^f)$$
-con $$w_m^f = \frac{1}{M}$$ e $$\sigma = \frac{\sigma_a}{\sigma_T}$$
-* Considerazioni <b>Modello di Markowitz </b>
+
+Se vado in banca, e apro il contocorrente, mi viene fatta la profilazione, per capire quale sia il mio livello di avversione al rischio. In base ad esso, mi propongono investimenti, con cui mi viene proposto massimo rendimento atteso secondo l'ultima formula.
+Devo scegliere portafoglio $$(w_1,..,w_M) = \alpha(w_1^T,...,w_M^T) + (1-\alpha)*(w_1^f,...,w_M^f)$$
+con $w_m^f = \frac{1}{M}$ e $\alpha = \frac{\sigma_a}{\sigma_T}$
+
+###Considerazioni Modello di Markowitz
 Vorrei analizzare i ruoli dei singoli nel portafoglio.
-(r ed r_T con barra) NOTA $r_f = r_0$
-$$r_m - r_0 = \beta_m(r_T - r_0)$$ per ogni m = 1,..M
+
+$$\bar{r_m} - r_0 = \beta_m(\bar{r_T} - r_0)$$ per ogni m = 1,..M.
+
 A sinistra ho il <b>tasso di rendimento atteso in eccesso del titolo m-esimo </b> e a destra ho <b> tasso di rendimento a tasso in eccesso del portafoglio tangente </b>
 (r non medio in quanto è v.a. non media)
 $$\beta_m = \frac{\sigma_m,_T}{\sigma_T^2} =\frac{cov(r_m,r_T)}{D^2(r_T)}$$
 
-$$\sigma_\alpha = (\alpha^2*\sigma_m^2 + 2*\alpha*(1-\alpha)*\sigma_m,_T + (1-\alpha)^2*\sigma_T^2)^\frac{1}{2}$$
+$$\sigma_\alpha = (\alpha^2\sigma_m^2 + 2\alpha*(1-\alpha)\sigma_m,_T + (1-\alpha)^2\sigma_T^2)^{1/2}$$
 
-per $\alpha=1$ ho i punti $(r_m,\sigma_m)$ (r medio)
+per $\alpha=1$ ho i punti $(\bar{r_m},\sigma_m)$ 
 
-* Anche se non so come disegnare la curva, deve essere tangente alla frontiera efficiente, altrimenti bucherei, e quindi potrei realizzare col mio portafoglio un comportamento migliore di quella realizzata con la CML, e ciò non è possibile.
-Allora $\sigma_m$ deve essere tangente alla CML in $(\sigma_T, r_T)$ con R_T medio.
+Anche se non so come disegnare la curva, deve essere tangente alla frontiera efficiente, altrimenti bucherei, e quindi potrei realizzare col mio portafoglio un comportamento migliore di quella realizzata con la CML, e ciò non è possibile.
+Allora $\sigma_m$ deve essere tangente alla CML in $(\sigma_T, \bar{r_T})$ 
 Devo imporre la condizione di tangenza.
-* $$\frac{d(r_\alpha)}{d(r_\alpha)} = tan(\theta) = \frac{r_m - r_T}{\frac{\sigma_m,_T - \sigma_T^2}{\sigma_T}}$$ per alpha = 0
-Il risultato è $$r_m - r_f = \beta_m*(r_T - r_f)$$
+$$\frac{d(r_\alpha)}{d(\sigma_{\alpha})}_{\alpha=0} = tan(\theta) = \frac{r_m - r_T}{\frac{\sigma_m,_T - \sigma_T^2}{\sigma_T}}$$ per $\alpha = 0$ il risultato è $$r_m - r_f = \beta_m*(r_T - r_f)$$
 con Beta = beta del titolo n-esimo, r_m e r_T medie.
 Questi sono tassi di rendimento atteso (numeri).
-* Voglio trasformarla in equazione sui tassi di rendimento, devo passare a v.a. (sopra sono tutti numeri!)
-$$r_m - r_f = \beta_m*(r_T - r_f) + \epsilon_m$$
-con epsilon_m V.A., che quindi mi rende il tutto una v.a. e quindi equazione sui tassi di rendimento. Devo però imporre
+
+Voglio trasformarla in equazione sui tassi di rendimento, devo passare a v.a. (sopra sono tutti numeri!)
+$$\bar{r_m} - r_0 = \beta_m*(\bar{r_T} - r_0) + \epsilon_m$$
+con $\epsilon_m$ V.A., che quindi mi rende il tutto una v.a. e quindi equazione sui tassi di rendimento. Devo però imporre
 $$E[\epsilon_m] = 0$$, in modo tale che epsilon_m medio (con la barra sopra) = 0 
-* $$cov(\epsilon_m,r_T) = 0$$ dovuto a come è composto $$\beta_m = \frac{\sigma_m,_T}{\sigma_T^2}$$
-* $$\sigma_m^2 = \beta_m^2 *\sigma_T^2 + E[\epsilon_m^2]$$
+
+$$cov(\epsilon_m,r_T) = 0$$ dovuto a come è composto $$\beta_m = \frac{\sigma_m,_T}{\sigma_T^2}$$
+
+$$\sigma_m^2 = \beta_m^2 *\sigma_T^2 + E[\epsilon_m^2]$$
 Ho rischio sistematico (del fatto che il titolo appartiene ad un mercato, mi prendo parte di rischio) e rischio idiosincratico (rischio sull'investimetno del singolo titolo). Il primo non lo posso eliminare, il secondo sì (mediante riduzione del rischio).
-* $\epsilon_m$ è l'errore che si ha passando dalle medie alle v.a., ci sarà sempre un errore che commettiamo.
-* Il portafoglio tangente coincide col portafoglio di mercato, nel <b>modello CAPM - Capital Asset Pricing Model </b>. Tale modello è granitico, funziona perchè tutti credono fortemente in questo modello. Ciò significa che se chiamo la capitalizzazione del titolo m-esimo $K_m = n_m * S_m$, ovvero flottante (numero di azioni del titolo m-esimo sul mercato) per il prezzo della singola azione. Introduco la capitalizzazione totale del mercato $K= \sum_{m=1}^M K_m$, inoltre $w_m = \frac{K_m}{K}$ e $\sum_{m=1}^M w_m = 1$.
+
+
+$\epsilon_m$ è l'errore che si ha passando dalle medie alle v.a., ci sarà sempre un errore che commettiamo.
+
+Il portafoglio tangente coincide col portafoglio di mercato, nel <b>modello CAPM - Capital Asset Pricing Model </b>. Tale modello è granitico, funziona perchè tutti credono fortemente in questo modello. Ciò significa che se chiamo la capitalizzazione del titolo m-esimo $K_m = n_m * S_m$, ovvero flottante (numero di azioni del titolo m-esimo sul mercato) per il prezzo della singola azione. Introduco la capitalizzazione totale del mercato $K= \sum_{m=1}^M K_m$, inoltre $w_m = \frac{K_m}{K}$ e $\sum_{m=1}^M w_m = 1$.
 (sono medie le varie r adesso)
 $r_M = r_T = \sum_{m=1}^M r_m*w_m$ e anche $\sigma_M = \sigma_T =....$ sono come prima!
 $r - r_0 = \beta(r_m - r_0)$ con r e r_m medie.
 Se dentro ci metto $r = \frac{S(T) - S(0)}{S(0)}$ trovo:
-* r medio = E[r] e $S(0) = \frac{E[S(T)]}{1+r_0 + \beta(r_m - r_0)}$
+
+r medio = E[r] e $S(0) = \frac{E[S(T)]}{1+r_0 + \beta(r_m - r_0)}$
 
 Il prezzo di un titolo oggi è uguale all'attesa del prezzo futuro scontata per un fattore di rischio aggiustato. Il fattore di aggiustamento dipende da beta, mi dice quanto aggiustare.
 E' legata a $S(0) = \frac{E[S(T)]}{1+r_0}$ (E con la tilde).
