--- a/MPSMF/Lezioni/Lez 15 - 2:05:23/Lez 15 - 2:05:23.md
+++ b/MPSMF/Lezioni/Lez 15 - 2:05:23/Lez 15 - 2:05:23.md
@@ -5,7 +5,9 @@ Viene ripreso il grafico dell'altra volta, con la Capital Market Line. Abbiamo v
 Se prendo un punto $(\sigma,r)$ appartenente alla MCL, scrivo retta passante per due punti:
 $\frac{\bar{r} - r_0}{\bar{r_T} - r_0} = \frac{\sigma - \sigma_0}{\sigma_T - \sigma_0} = \frac{\sigma}{\sigma_T} $
 
-$r_0$ sarebbe il rendimento sull'asse delle y. Troviamo:
+$r_0$ sarebbe il rendimento sull'asse delle y. 
+
+Troviamo:
 $\sigma(r_a) =  \frac{\sigma_T}{\bar{r_T} - r_0} *(r_a - r_0)$ e   ${\bar{r}(\sigma_a)} = r_0 + \frac{\bar{r_T} - r_0}{\sigma_T}\sigma_a$
 La CML ci aiuta moltissimo quindi.
 
