modificato file pdf

--- a/MPSMF/Lezioni/Lez 15 - 2:05:23/Lez 15 - 2:05:23.md
+++ b/MPSMF/Lezioni/Lez 15 - 2:05:23/Lez 15 - 2:05:23.md
@@ -1,6 +1,8 @@
 ### MF 2 maggio 2023
 
-Viene ripreso il grafico dell'altra volta, con la Capital Market Line. Abbiamo visto che il punto $(\sigma_T,r_T)$ è individuato con Sharp a partire da $(w_1^{(T)},...,w_M^{(T)})$ Abbiamo caratterizzato anche  $\sigma_T = (\sum_{l,m=1}^M \sigma_{l,m}  w_l^{(T)}  w_m^{(T)})^{1/2}$  e  $\bar{r}_T =\sum_{i=1}^M r_m * w_m^{(T)}$
+Viene ripreso il grafico dell'altra volta, con la Capital Market Line. Abbiamo visto che il punto $(\sigma_T,r_T)$ è individuato con Sharp a partire da $(w_1^{(T)},...,w_M^{(T)})$.
+
+Abbiamo caratterizzato anche  $\sigma_T = (\sum_{l,m=1}^M \sigma_{l,m}  w_l^{(T)}  w_m^{(T)})^{1/2}$  e  $\bar{r}_T =\sum_{i=1}^M r_m  w_m^{(T)}$
 
 Se prendo un punto $(\sigma,r)$ appartenente alla MCL, scrivo retta passante per due punti:
 $\frac{\bar{r} - r_0}{\bar{r_T} - r_0} = \frac{\sigma - \sigma_0}{\sigma_T - \sigma_0} = \frac{\sigma}{\sigma_T} $
@@ -8,11 +10,9 @@ $\frac{\bar{r} - r_0}{\bar{r_T} - r_0} = \frac{\sigma - \sigma_0}{\sigma_T - \si
 $r_0$ sarebbe il rendimento sull'asse delle y. 
 
 Troviamo:
-$\sigma(r_a) =  \frac{\sigma_T}{\bar{r_T} - r_0} *(r_a - r_0)$ e   ${\bar{r}(\sigma_a)} = r_0 + \frac{\bar{r_T} - r_0}{\sigma_T}\sigma_a$
-
+$\sigma(r_a) =  \frac{\sigma_T}{\bar{r_T} - r_0} (r_a - r_0)$  e   ${\bar{r}(\sigma_a)} = r_0 + \frac{\bar{r_T} - r_0}{\sigma_T}\sigma_a$
 
 La CML ci aiuta moltissimo quindi.
-
 Se vado in banca, e apro il contocorrente, mi viene fatta la profilazione, per capire quale sia il mio livello di avversione al rischio. In base ad esso, mi propongono investimenti, con cui mi viene proposto massimo rendimento atteso secondo l'ultima formula. Devo scegliere portafoglio tale che sia una combinazione lineare di:
 
 $(w_1,..,w_M) = \alpha(w_1^T,...,w_M^T) + (1-\alpha)(w_1^f,...,w_M^f)$
@@ -27,24 +27,24 @@ $\bar{r_m} - r_0 = \beta_m(\bar{r_T} - r_0)$ per ogni $m = 1,...,M $
 A sinistra ho il <b>tasso di rendimento atteso in eccesso del titolo m-esimo</b> e a destra ho <b>tasso di rendimento a tasso in eccesso del portafoglio tangente </b> 
 
 (r non medio in quanto è v.a. non media)
-$\beta_m = \frac{\sigma_m,_T}{\sigma_T^2} =\frac{cov(r_m,r_T)}{D^2(r_T)}$
+$\beta_m = \frac{\sigma_m,_T}{\sigma_T^2} =\frac{cov(r_m,r_T)}{D^2(r_T)}
+$
 
-$\sigma_\alpha = (\alpha^2\sigma_m^2 + 2\alpha*(1-\alpha)\sigma_m,_T + (1-\alpha)^2\sigma_T^2)^{1/2}$
+$\sigma_\alpha = (\alpha^2\sigma_m^2 + 2\alpha(1-\alpha)\sigma_m,_T + (1-\alpha)^2\sigma_T^2)^{1/2}$
 
-per $\alpha=1$ ho i punti $(\bar{r_m},\sigma_m)$ 
+per $\alpha=1$ ho i punti $(\bar{r_m},\sigma_m)$
 
 Anche se non so come disegnare la curva, deve essere tangente alla frontiera efficiente, altrimenti bucherei, e quindi potrei realizzare col mio portafoglio un comportamento migliore di quella realizzata con la CML, e ciò non è possibile.
 Allora $\sigma_m$ deve essere tangente alla CML in $(\sigma_T, \bar{r_T})$ 
 Devo imporre la condizione di tangenza.
 $\frac{d(r_\alpha)}{d(\sigma_{\alpha})}_{\alpha=0} = tan(\theta) = \frac{r_m - r_T}{\frac{\sigma_m,_T - \sigma_T^2}{\sigma_T}}$ 
 
-per $\alpha = 0$ il risultato è $\bar{r_m} - r_0 = \beta_m*(\bar{r_T} - r_0)$ con $\beta_m$ = beta del titolo n-esimo, 
+per $\alpha = 0$ il risultato è $\bar{r_m} - r_0 = \beta_m(\bar{r_T} - r_0)$ con $\beta_m$ = beta del titolo n-esimo. 
 Questi sono tassi di rendimento atteso (numeri). Voglio trasformarla in equazione sui tassi di rendimento, devo passare a v.a. (sopra sono tutti numeri!)
 $\bar{r_m} - r_0 = \beta_m*(\bar{r_T} - r_0) + \epsilon_m$
-con $\epsilon_m$ Variabile Aleatoria, che quindi mi rende il tutto una v.a. e quindi equazione sui tassi di rendimento. Devo però imporre
-$E[\epsilon_m] = \bar\epsilon_m= 0$ ed anche
-
-$cov(\epsilon_m,r_T) = 0$ dovuto a come è composto $\beta_m = \frac{\sigma_m,_T}{\sigma_T^2}$
+con $\epsilon_m$ variabile aleatoria, che quindi mi rende il tutto una v.a. e quindi equazione sui tassi di rendimento. 
+Devo però imporre:
+$E[\epsilon_m] = \bar\epsilon_m= 0$ ed anche $cov(\epsilon_m,r_T) = 0$ dovuto a come è composto $\beta_m = \frac{\sigma_m,_T}{\sigma_T^2}$
 
 Abbiamo anche che:
 
@@ -53,20 +53,27 @@ Ho rischio sistematico (del fatto che il titolo appartiene ad un mercato, mi pre
 
 $\epsilon_m$ è l'errore che si ha passando dalle medie alle v.a., ci sarà sempre un errore che commettiamo.
 
-Il portafoglio tangente coincide col portafoglio di mercato, nel <b>modello CAPM - Capital Asset Pricing Model </b>. Tale modello è granitico, funziona perchè tutti credono fortemente in questo modello. Ciò significa che se chiamo la capitalizzazione del titolo m-esimo $K_m = n_m  S_m$, ovvero flottante (numero di azioni del titolo m-esimo sul mercato) per il prezzo della singola azione. Introduco la capitalizzazione totale del mercato $K= \sum_{m=1}^M K_m$, inoltre $w_m = \frac{K_m}{K}$ e $\sum_{m=1}^M w_m = 1$.
-(sono medie le varie r adesso)
+Il portafoglio tangente coincide col portafoglio di mercato, nel <b>modello CAPM - Capital Asset Pricing Model</b>. Tale modello è granitico, funziona perchè tutti credono fortemente in questo modello. Ciò significa che se chiamo la capitalizzazione del titolo m-esimo $K_m = n_m  S_m$, ovvero flottante (numero di azioni del titolo m-esimo sul mercato) per il prezzo della singola azione. Introduco la capitalizzazione totale del mercato $K= \sum_{m=1}^M K_m$, inoltre $w_m = \frac{K_m}{K}$ e $\sum_{m=1}^M w_m = 1$. (sono medie le varie r adesso)
 
 Nel modello **CAPM** si ha (poichè portafoglio mercato = portafoglio tangente)
+
 $\bar{r_M} = \bar{r_T} = \sum_{m=1}^M r_m w_m$ e anche $\sigma_M = \sigma_T =....$ sono come prima!
+
 $\bar{r} - r_0 = \beta(\bar{r_m} - r_0)$ 
+
 Se dentro $\bar{r}$ ci metto $r = \frac{S(T) - S(0)}{S(0)}$ (applicando la media, ovvero applicando $\bar{r} = E[r]$)  trovo $S(0) = \frac{\bar{E[S(T)]}}{1+r_0 + \beta(r_m - r_0)}$
 
 Il prezzo di un titolo oggi è uguale all'attesa del prezzo futuro scontata per un fattore di rischio aggiustato. Il fattore di aggiustamento dipende da beta, mi dice quanto aggiustare.
 E' legata a $S(0) = \frac{E[S(T)]}{1+r_0} = \frac{\bar{S}(T)}{1+r_0}$ 
+
 Cioè è forward looking, prezzo oggi definito in base al prezzo futuro. Tutto ciò che si basa sui prezzi passati non ha valore!
 Io investo perchè credo che domani varrà un certo valore, non perchè ieri valeva un certo valore. Scommetto sul domani.
 I prezzi passati ci dicono come stimare i parametri di equazioni che sperano di modellare il comportamento dei prezzi. Stimo i parametri, non il futuro. Sono sempre equazioni stocastiche (incerta). In fisica ho soluzioni deterministiche invece, qui ho dipendenza da fattori aleatori.
+
 $\beta = \frac{cov(S(T),r_m}{\sigma_M^2*S(0)}$
+
 Se metto Beta nell'equazione S(0) troviamo:
+
 $S(0) = \frac{1}{1+r_0}*( E[S(T)] - \frac{cov(S(T),r_M}{\sigma_M^2}*(r_M - r_0))$
+
 S(T) è titolo rischioso generico, potrebbe anche essere portafoglio (combinazione lineare titoli rischiosi con pesi). La speranza e covarianza (fissato r_m nella covarianza) sono operatori lineari. Quindi ho combinazione lineare di titoli rischiosi, altro indice di <b> assenza di arbitraggio. </b> Devo vedere questi 'pezzi' insieme.
